--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,17 +8,21 @@
         formControlName="firstname"
         [appearance]="appearance"
         [disabled]="true"
+        (valueChange)="inputfieldChange($event)"
       ></app-inputfield>
-    
+      {{ formGroup.get('firstname')?.value || "null"}}
       <app-inputfield
         [customErrorMessages]="errorMessagesl"
         label="Last Name"
         formControlName="lastname"
         [appearance]="appearance1"
+        (valueChange)="inputfieldChange($event)"
       ></app-inputfield>
+      <div>
+        {{ formGroup.get('lastname')?.value || "null"}}
+      </div>
       <button mat-button type="submit" (click)="onSubmit()">Submit</button>
     </form>
-  
   </mat-card>
 </div>
 
