--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         [disabled]="true"
         (valueChange)="inputfieldChange($event)"
       ></app-inputfield>
-      {{ formGroup.get('firstname')?.value || "null"}}
+
       <app-inputfield
         [customErrorMessages]="errorMessagesl"
         label="Last Name"
@@ -19,8 +19,20 @@
         (valueChange)="inputfieldChange($event)"
       ></app-inputfield>
       <div>
-        {{ formGroup.get('lastname')?.value || "null"}}
+        app ::{{ formGroup.get('lastname')?.value || "null"}}
       </div>
+      
+      <app-inputfield
+      *ngIf="formGroup.get('age')" 
+      label="Age"
+      formControlName="age"
+      [appearance]="appearance"
+      (valueChange)="inputfieldChange($event)"
+    ></app-inputfield>
+    
+    <div *ngIf="formGroup.get('age')" >
+      app :: {{ formGroup.get('age')?.value || "null"}}
+    </div>
       <button mat-button type="submit" (click)="onSubmit()">Submit</button>
     </form>
   </mat-card>
