--- a/src/app/inputfield/inputfield.component.html
+++ b/src/app/inputfield/inputfield.component.html
@@ -2,7 +2,7 @@
   <mat-form-field [appearance]="appearance">
     <mat-label
     >{{ label }}</mat-label>
-    <input matInput [required]="isRequired"
+    <input matInput 
      [type]="type" 
      [formControl]="control"  
      />
