--- a/src/app/inputfield/inputfield.component.html
+++ b/src/app/inputfield/inputfield.component.html
@@ -11,7 +11,7 @@
   <app-input-validations [customErrorMessages]="customErrorMessages" [errors]="control.errors">
   </app-input-validations>
   
-  <div>
+  <!-- <div>
     Dirty: {{ control.dirty }}
   </div>
   <div>
@@ -26,7 +26,7 @@
   <div>
     control value:{{control.value}}<br>
     isdisabled:{{control.disabled}}
-  </div>
+  </div> -->
 <br/>
   
 </div>
