--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,110 +1,118 @@
 <div class="container">
   <h1>My Angular Theme App</h1>
-  <button class="toggle" (click)="toggleTheme()">Toggle Theme</button>
+  <button 
+      class="toggle" 
+      (click)="toggleTheme()"
+      class="bt1"
+      >Toggle Theme
+   </button>
 </div>
 
-<div class="text-center">
+<div class="text-center" [attr.data-theme]="themeService.getActiveTheme()">
   <mat-card class="card">
-    <p>Mat-Input</p>
     <form [formGroup]="formGroup">
-      <app-inputfield
-        [customErrorMessages]="errorMessages"
-        label="First Name"
-        formControlName="firstname"
-        [appearance]="appearance"
+      <p> Custom Components</p>
+      <!-- Mat Input Field -->
+      <app-inputfield 
+          [customErrorMessages]="errorMessages" 
+          label="First Name" 
+          formControlName="firstname"
+          [appearance]="appearance">
+      </app-inputfield>
 
-      ></app-inputfield>
-
-      <app-inputfield
-        [customErrorMessages]="errorMessagesl"
-        label="Last Name"
-        formControlName="lastname"
-        [appearance]="appearance1"
-      ></app-inputfield>
-      <div>
+     <!-- Mat Input Field -->
+      <app-inputfield 
+          [customErrorMessages]="errorMessagesl" 
+          label="Last Name" 
+          formControlName="lastname"
+          [appearance]="appearance">
+        </app-inputfield>
+      <!-- <div>
         app ::{{ formGroup.get('lastname')?.value || "null"}}
-      </div>
-     
-    
-      <!-- <app-radiobutton
-      label="Dayscholor"
-      value="Dayscholor"
-      [radioId]="'radioId1'"
-      formControlName="radioControl"
-    ></app-radiobutton>
-    <app-radiobutton
-      label="Hosteller"
-      value="Hosteller"
-      [radioId]="'radioId2'"
-      formControlName="radioControl"
-    ></app-radiobutton> -->
-    <!-- parent.component.html -->
-  <app-radiobutton label="Dayscholor" value="Dayscholor" radioId="radioId1" formControlName="radioControl"></app-radiobutton>
-  <app-radiobutton label="Hosteller" value="Hosteller" radioId="radioId2" formControlName="radioControl"></app-radiobutton>
+      </div> -->
 
-    
-    
-      <app-select
-        [customErrorMessages]="emage"
-        label="Age"
-        selectId="myId"
-        [options]="['1', '2', '3']"
-        formControlName="age"
-      ></app-select>
-      <div>
+      <!-- Radio Button with Same Form control Name -->
+      <app-radiobutton 
+          label="Dayscholar" 
+          value="Dayscholar" 
+          radioId="radioId1"
+          formControlName="radioControl">
+      </app-radiobutton>
+
+      <app-radiobutton 
+          label="Hosteller" 
+          value="Hosteller" 
+          radioId="radioId2"
+          formControlName="radioControl">
+      </app-radiobutton>
+
+      <!-- Mat Select -->
+      <app-select 
+          [customErrorMessages]="emage" 
+          label="Age" 
+          selectId="myId" 
+          [options]="['1', '2', '3']"
+          formControlName="age">
+      </app-select>
+      <!-- <div>
         app :: {{ formGroup.get('age')?.value || "null"}}
-      </div>
-      <app-checkbox
-          [customErrorMessages]="emclick"
-          label="click"
-          selectId="click"
-          formControlName="click"
-          ></app-checkbox>
-      <div>
-        app :: {{ formGroup.get('click')?.value || "null"}}
-      </div>
-      <app-multiselect
-      label="year"
-      multiSelectId="year"
-      [options]="['2021', '2022', '2023']"
-      formControlName="years"
-      ></app-multiselect>
-      <div>
+      </div> -->
+
+      <!-- Mat Multi Select -->
+      <app-multiselect 
+          label="year" 
+          multiSelectId="year" 
+          [options]="['2021', '2022', '2023']"
+          formControlName="years">
+      </app-multiselect>
+      <!-- <div>
         Selected Years: {{ formGroup.get('years')?.value?.join(', ') || 'None' }}
-        </div> 
+      </div> -->
 
-      <app-inputfield
-      *ngIf="formGroup.get('year')" 
-      label="Year"
-      formControlName="year"
-      [appearance]="appearance"
-    ></app-inputfield>
-    
-    <div *ngIf="formGroup.get('year')" >
-      app :: {{ formGroup.get('year')?.value || "null"}}
-    </div>
-    <form [formGroup]="checkboxgrp">
-      <app-checkbox
-          label="UG"
-          selectId="ug"
-          formControlName="UG"
-          ></app-checkbox>
-          <app-checkbox
-          label="PG"
-          selectId="pg"
-          formControlName="PG"
-          ></app-checkbox>
-    </form>
-      <button mat-button type="submit" (click)="onSubmit()">Submit</button>
-    </form>
-   
-   
-    <pre>  checkbox: {{ checkboxgrp.value | json }}</pre>
+      <!-- Single Check box -->
+      <app-checkbox 
+          [customErrorMessages]="emclick" 
+          label="click" 
+          selectId="click"
+          formControlName="click">
+      </app-checkbox>
+      <!-- <div>
+        app :: {{ formGroup.get('click')?.value || "null"}}
+      </div> -->
 
+      <!-- Check box group -->
+      <form [formGroup]="checkboxgrp">
+        <app-checkbox 
+            label="UG" 
+            selectId="ug" 
+            formControlName="UG">
+        </app-checkbox>
+
+        <app-checkbox 
+          label="PG" 
+          selectId="pg" 
+          formControlName="PG">
+        </app-checkbox>
+      </form>
+
+      <!-- formcontrol if exists -->
+      <app-inputfield 
+          *ngIf="formGroup.get('year')" 
+          label="Year" formControlName="year"
+          [appearance]="appearance">
+      </app-inputfield>
+      <!-- <div *ngIf="formGroup.get('year')">
+        app :: {{ formGroup.get('year')?.value || "null"}}
+      </div> -->
+
+      <button mat-button class="btn" type="submit" (click)="onSubmit()">Submit</button>
+      
+    <pre> checkbox: {{ checkboxgrp.value | json }}</pre>
     <pre>{{ formGroup.value | json }}</pre>
+
+    </form>
+
   </mat-card>
 </div>
 
 <router-outlet></router-outlet>
-
-
