--- a/src/app/checkbox/checkbox.component.html
+++ b/src/app/checkbox/checkbox.component.html
@@ -1,7 +1,12 @@
 <div class="dvs-form-control" *ngIf="control">
-  <mat-checkbox [formControl]="control" [id]="checkboxId" [class.required]="isRequired">{{ label }}</mat-checkbox>
-  <!-- <label [for]="checkboxId" *ngIf="label" [class.required]="isRequired">{{ label }}</label>
-  <input type="checkbox" [formControl]="control" [id]="checkboxId" /> -->
-  <app-input-validations [customErrorMessages]="customErrorMessages" [errors]="control.errors">
+  <mat-checkbox 
+  [formControl]="control" 
+  [id]="checkboxId" 
+  [class.required]="isRequired"
+  >{{ label }}</mat-checkbox>
+
+  <app-input-validations 
+  [customErrorMessages]="customErrorMessages" 
+  [errors]="control.errors">
   </app-input-validations>
 </div>
