--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,8 +1,8 @@
 // theme colors
 $primary: #f5f5f5 !default;
 $secondary: #333 !default;
-$error: #d32752 !default;
-$info: #57621b !default;
+$error: #ede1e3 !default;
+$info: #3b3c36 !default;
 
 // color palette
 $colors: (
