--- a/src/app/checkbox/checkbox.component.html
+++ b/src/app/checkbox/checkbox.component.html
@@ -1,4 +1,4 @@
-<div class="dvs-form-control" *ngIf="control">
+<div *ngIf="control">
   <mat-checkbox 
   [formControl]="control" 
   [id]="checkboxId" 
